--- a/css/style.css
+++ b/css/style.css
@@ -13,22 +13,22 @@ body {
     background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%); */
 }
 
+g {
+    display: block !important;
+}
+
 #container {
     width: 100%;
     height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
 }
 
 .sliderContainer {
-    position: absolute;
+    align-self: center;
+    justify-self: start;
 }
 
 .progress {
@@ -41,7 +41,8 @@ body {
 
 .progress__meter,
 .progress__value {
-  fill: none;
+    position: relative;
+    fill: none;
 }
 
 .progress__meter {
@@ -53,7 +54,7 @@ body {
 }
 
 .dial {
-    background-color: whitesmoke;
+    /* background-color: whitesmoke;
     border-radius: 50%;
     box-shadow: 0 0 3px black;
     cursor: pointer;
@@ -62,6 +63,12 @@ body {
     position: absolute;
     top: -13px;
     width: 26px;
+    z-index: 124; */
+    box-shadow: 0 0 3px black;
+    cursor: pointer;
+    margin-left: -13px;
+    position: absolute;
+    top: -13px;
     z-index: 124;
 }
 
@@ -76,10 +83,9 @@ input {
 }
 
 .price {
-    position: absolute;
-    top: 50%;
-    left: 15%;
-    transform: translate(-15%, -50%);
+    align-self: center;
+    justify-self: center;
+    display: block;
 }
 
 .price .pricing {
@@ -99,22 +105,14 @@ input {
     color: black;
 }
 
-@media screen and (max-width: 1140px) {
-
-    .price {
-        position: absolute;
-        display: inline-block;
-        top: 120%;
-        left: 50%;
-        transform: translate(-50%, -120%);
-    }
-
-}
-
 @media screen and (max-width: 768px) {
 
-    .price .pricing {
-        font-size: 2.5rem;
+    #container {
+        grid-template-columns: 1fr;
+    }
+
+    .sliderContainer {
+        justify-self: center;
     }
 
 }
