--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,17 @@ g {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: center;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-areas:
+        "price sliderContainer" */
 }
 
 .sliderContainer {
     align-self: center;
-    justify-self: start;
+    justify-self: center;
+    /* grid-area: sliderContainer; */
 }
 
 .progress {
@@ -41,7 +44,6 @@ g {
 
 .progress__meter,
 .progress__value {
-    position: relative;
     fill: none;
 }
 
@@ -54,7 +56,7 @@ g {
 }
 
 .dial {
-    /* background-color: whitesmoke;
+    background-color: whitesmoke;
     border-radius: 50%;
     box-shadow: 0 0 3px black;
     cursor: pointer;
@@ -63,12 +65,6 @@ g {
     position: absolute;
     top: -13px;
     width: 26px;
-    z-index: 124; */
-    box-shadow: 0 0 3px black;
-    cursor: pointer;
-    margin-left: -13px;
-    position: absolute;
-    top: -13px;
     z-index: 124;
 }
 
@@ -86,6 +82,7 @@ input {
     align-self: center;
     justify-self: center;
     display: block;
+    /* grid-area: price; */
 }
 
 .price .pricing {
@@ -109,6 +106,9 @@ input {
 
     #container {
         grid-template-columns: 1fr;
+        /* grid-template-areas:
+        "sliderContainer"
+        "price"; */
     }
 
     .sliderContainer {
